CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

set(PROJECT_NAME "create-git-proj")

PROJECT(${PROJECT_NAME})

add_definitions(-DTARGET_API_MAC_CARBON)

# Necessary Mac frameworks are added here
if(APPLE)
    find_library(CORESERVICES_FRAMEWORK CoreServices)
    mark_as_advanced(
        CORESERVICES_FRAMEWORK
    )
    set(MAC_FRAMEWORKS 
        ${CORESERVICES_FRAMEWORK}
    )
endif()

SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

SET(ROOT_DIR CACHE PATH "") 

SET(SRC
    src/main.cpp
)

SOURCE_GROUP("src" FILES ${SRC})

INCLUDE_DIRECTORIES(
	./
)

LINK_DIRECTORIES(
)

ADD_EXECUTABLE(${PROJECT_NAME}
	${SRC}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${MAC_FRAMEWORKS}
)
